--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -58,22 +58,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "87160dd55a5251ad",
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T15:58:05.436397100Z",
-     "start_time": "2024-01-27T15:57:49.621523500Z"
+     "end_time": "2024-01-27T16:07:56.293239900Z",
+     "start_time": "2024-01-27T16:07:47.537441300Z"
     }
    },
    "outputs": [],
    "source": [
     "def create_dataframe(category):\n",
-    " df = pd.DataFrame(columns = ['ID', 'IMG', 'IMG_TO_PXL_AR', 'CATEGORY', 'CODE'])\n",
+    " df = pd.DataFrame(columns = ['ID', 'IMG', 'CATEGORY', 'CODE'])\n",
     " for img in os.listdir(f'D:/HyperCrew_projects/IASA-Champ-24-stage1/data/raw/train/{category}'):\n",
-    "  pxl = np.array(cv2.imread(f'D:/HyperCrew_projects/IASA-Champ-24-stage1/data/raw/train/{category}/{img}', 0)).reshape(1, 50176)\n",
-    "  df.loc[len(df.index)] = [len(df.index), img, pxl, category, categories_code[category]]\n",
+    "  df.loc[len(df.index)] = [len(df.index), img, category, categories_code[category]]\n",
     " df.to_csv(f'D:/HyperCrew_projects/IASA-Champ-24-stage1/data/processed/{category}.csv')\n",
     "for (i, v) in categories_code.items():\n",
     "    create_dataframe(i)"
