--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,15 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:47:56.358129600Z",
-     "start_time": "2024-01-27T16:47:56.335994800Z"
+     "end_time": "2024-01-27T17:01:37.679526500Z",
+     "start_time": "2024-01-27T17:01:37.130331500Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Іван\\AppData\\Local\\Temp\\ipykernel_2280\\3402781332.py:2: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -26,9 +41,14 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T17:01:37.682525Z",
+     "start_time": "2024-01-27T17:01:37.679526500Z"
+    }
    },
-   "id": "9adf491bdd699f05"
+   "id": "9adf491bdd699f05",
+   "execution_count": 1
   }
  ],
  "metadata": {
