--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -5,22 +5,21 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.utils import to_categorical\n",
-    "\n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
     "import cv2\n",
-    "from config import CATEGORIES\n",
-    "COUNT = CATEGORIES.__len__()"
+    "\n",
+    "from config import *"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:48:20.023802Z",
-     "start_time": "2024-01-27T16:48:07.914620100Z"
+     "end_time": "2024-01-27T17:01:29.959891100Z",
+     "start_time": "2024-01-27T17:01:29.954888600Z"
     }
    },
    "id": "6f80850071ca8b25",
-   "execution_count": 1
+   "execution_count": 9
   },
   {
    "cell_type": "code",
@@ -58,12 +57,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:48:20.040989Z",
-     "start_time": "2024-01-27T16:48:20.032396200Z"
+     "end_time": "2024-01-27T17:01:29.993275Z",
+     "start_time": "2024-01-27T17:01:29.962890Z"
     }
    },
    "id": "b3915ee598f1666e",
-   "execution_count": 2
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -72,7 +71,7 @@
      "data": {
       "text/plain": "array([[0., 1.],\n       [1., 0.]], dtype=float32)"
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,12 +98,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:48:28.071965100Z",
-     "start_time": "2024-01-27T16:48:27.910826200Z"
+     "end_time": "2024-01-27T17:01:30.121129400Z",
+     "start_time": "2024-01-27T17:01:29.972271200Z"
     }
    },
    "id": "f2f74259a73bc793",
-   "execution_count": 3
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -133,12 +132,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:48:30.784981Z",
-     "start_time": "2024-01-27T16:48:30.781497400Z"
+     "end_time": "2024-01-27T17:01:30.122132200Z",
+     "start_time": "2024-01-27T17:01:30.110778Z"
     }
    },
    "id": "251582f2630fc789",
-   "execution_count": 4
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -152,21 +151,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:48:31.582573300Z",
-     "start_time": "2024-01-27T16:48:31.448617500Z"
+     "end_time": "2024-01-27T17:01:30.122132200Z",
+     "start_time": "2024-01-27T17:01:30.117582200Z"
     }
    },
    "id": "51cd3273bfe53941",
-   "execution_count": 5
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f9d056213066322a"
+   "execution_count": 13
   }
  ],
  "metadata": {
