--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:47:56.358129600Z",
-     "start_time": "2024-01-27T16:47:56.335994800Z"
+     "end_time": "2024-01-27T16:51:54.694409100Z",
+     "start_time": "2024-01-27T16:51:54.689561200Z"
     }
    },
    "outputs": [],
@@ -24,11 +24,38 @@
   {
    "cell_type": "code",
    "outputs": [],
+   "source": [
+    "train_test_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
+    "\n",
+    "def images_to_csv(category):\n",
+    "    category_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
+    "    for img in os.listdir(f'data/train/{category}'):\n",
+    "        category_dataframe.loc[len(category_dataframe.index)] = [img, CATEGORIES[category]]\n",
+    "        train_test_dataframe.loc[len(category_dataframe.index)] = [img, CATEGORIES[category]]\n",
+    "        category_dataframe.to_csv(f'data/processed/categories/{category}.csv')\n",
+    "\n",
+    "for (category, code) in CATEGORIES.items():\n",
+    "    images_to_csv(category)\n",
+    "train_test_dataframe.to_csv(f'data/processed/train_test_data.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T17:04:51.318619600Z",
+     "start_time": "2024-01-27T17:04:21.824397Z"
+    }
+   },
+   "id": "112bfa254252c6cd",
+   "execution_count": 4
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "9adf491bdd699f05"
+   "id": "86732e62e369a8c"
   }
  ],
  "metadata": {
