--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-27T16:51:54.694409100Z",
-     "start_time": "2024-01-27T16:51:54.689561200Z"
+     "end_time": "2024-01-27T17:10:57.232584800Z",
+     "start_time": "2024-01-27T17:10:57.224327700Z"
     }
    },
    "outputs": [],
@@ -41,21 +41,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T17:04:51.318619600Z",
-     "start_time": "2024-01-27T17:04:21.824397Z"
+     "end_time": "2024-01-27T17:11:27.635483400Z",
+     "start_time": "2024-01-27T17:10:57.232584800Z"
     }
    },
    "id": "112bfa254252c6cd",
-   "execution_count": 4
+   "execution_count": 6
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T17:11:27.638159500Z",
+     "start_time": "2024-01-27T17:11:27.636063400Z"
+    }
    },
-   "id": "86732e62e369a8c"
+   "id": "86732e62e369a8c",
+   "execution_count": 6
   }
  ],
  "metadata": {
