--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,22 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-27T17:10:57.232584800Z",
-     "start_time": "2024-01-27T17:10:57.224327700Z"
+     "end_time": "2024-01-27T17:58:14.839162Z",
+     "start_time": "2024-01-27T17:58:14.830485100Z"
     }
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from IPython.display import Image\n",
-    "import matplotlib as plt\n",
     "import cv2\n",
+    "import os\n",
+    "\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
     "from config import CATEGORIES"
    ]
   },
@@ -31,22 +32,63 @@
     "    category_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
     "    for img in os.listdir(f'data/train/{category}'):\n",
     "        category_dataframe.loc[len(category_dataframe.index)] = [img, CATEGORIES[category]]\n",
-    "        train_test_dataframe.loc[len(category_dataframe.index)] = [img, CATEGORIES[category]]\n",
-    "        category_dataframe.to_csv(f'data/processed/categories/{category}.csv')\n",
+    "        train_test_dataframe.loc[len(train_test_dataframe.index)] = [img, CATEGORIES[category]]\n",
+    "        # category_dataframe.to_csv(f'data/processed/categories/{category}.csv')\n",
     "\n",
     "for (category, code) in CATEGORIES.items():\n",
     "    images_to_csv(category)\n",
-    "train_test_dataframe.to_csv(f'data/processed/train_test_data.csv')"
+    "#train_test_dataframe.to_csv(f'data/processed/train_test_data.csv')"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T17:11:27.635483400Z",
-     "start_time": "2024-01-27T17:10:57.232584800Z"
+     "end_time": "2024-01-27T17:58:33.488137500Z",
+     "start_time": "2024-01-27T17:58:14.840174100Z"
     }
    },
    "id": "112bfa254252c6cd",
-   "execution_count": 6
+   "execution_count": 41
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "def image_to_numpy_array(img_name, category_code):\n",
+    "    image = cv2.imread(f'data/train/{list(CATEGORIES)[category_code]}/{img_name}', 0)\n",
+    "    return np.array(image).reshape(image.shape[0]*image.shape[1],)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T17:58:33.499123400Z",
+     "start_time": "2024-01-27T17:58:33.489142400Z"
+    }
+   },
+   "id": "26a8bbe7e9e885ec",
+   "execution_count": 42
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "train_set = pd.DataFrame()\n",
+    "test_set = pd.DataFrame()\n",
+    "split = StratifiedShuffleSplit(n_splits=1, test_size=0.05)\n",
+    "for train_dataframe, test_dataframe in split.split(train_test_dataframe, train_test_dataframe[[\"CODE\"]]):\n",
+    "    train_set = train_test_dataframe.loc[train_dataframe]\n",
+    "    test_set = train_test_dataframe.loc[test_dataframe]\n",
+    "train_set.to_csv(f'data/processed/train_set.csv')\n",
+    "test_set.to_csv(f'data/processed/test_set.csv')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-27T17:58:33.616948900Z",
+     "start_time": "2024-01-27T17:58:33.498528200Z"
+    }
+   },
+   "id": "802815cd6a86d56e",
+   "execution_count": 43
   },
   {
    "cell_type": "code",
@@ -55,12 +97,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T17:11:27.638159500Z",
-     "start_time": "2024-01-27T17:11:27.636063400Z"
+     "end_time": "2024-01-27T17:58:33.626809100Z",
+     "start_time": "2024-01-27T17:58:33.619942600Z"
     }
    },
-   "id": "86732e62e369a8c",
-   "execution_count": 6
+   "id": "8f7323682eac7c7d",
+   "execution_count": 43
   }
  ],
  "metadata": {
