--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -77,8 +77,8 @@
     "for train_dataframe, test_dataframe in split.split(train_test_dataframe, train_test_dataframe[[\"CODE\"]]):\n",
     "    train_set = train_test_dataframe.loc[train_dataframe]\n",
     "    test_set = train_test_dataframe.loc[test_dataframe]\n",
-    "train_set.to_csv(f'data/processed/train_set.csv')\n",
-    "test_set.to_csv(f'data/processed/test_set.csv')"
+    "# train_set.to_csv(f'data/processed/train_set.csv')\n",
+    "# test_set.to_csv(f'data/processed/test_set.csv')"
    ],
    "metadata": {
     "collapsed": false,
