--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -12,31 +12,30 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import cv2\n",
-    "import os\n",
-    "\n",
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "\n",
-    "from config import CATEGORIES"
+    "import pandas as pd\n",
+    "import os\n",
+    "from config import *"
    ]
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "#Dataframe for all data in \"train\" folder\n",
     "train_test_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
     "\n",
-    "def images_to_csv(category):\n",
+    "#Convert all data to csv files\n",
+    "def data_to_csv(category):\n",
     "    category_dataframe = pd.DataFrame(columns=['IMG', 'CODE'])\n",
     "    for img in os.listdir(f'data/train/{category}'):\n",
-    "        category_dataframe.loc[len(category_dataframe.index)] = [img, CATEGORIES[category]]\n",
-    "        train_test_dataframe.loc[len(train_test_dataframe.index)] = [img, CATEGORIES[category]]\n",
-    "        # category_dataframe.to_csv(f'data/processed/categories/{category}.csv')\n",
+    "        category_dataframe.loc[category_dataframe.shape[0]] = [img, CATEGORIES_CODES[category]]\n",
+    "        train_test_dataframe.loc[train_test_dataframe.shape[0]] = [img, CATEGORIES_CODES[category]]\n",
+    "        #category_dataframe.to_csv(f'data/processed/categories/{category}.csv') \n",
     "\n",
-    "for (category, code) in CATEGORIES.items():\n",
-    "    images_to_csv(category)\n",
+    "for (categories, code) in CATEGORIES_CODES.items():\n",
+    "    data_to_csv(categories)\n",
+    "\n",
     "#train_test_dataframe.to_csv(f'data/processed/train_test_data.csv')"
    ],
    "metadata": {
@@ -53,30 +52,15 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "def image_to_numpy_array(img_name, category_code):\n",
-    "    image = cv2.imread(f'data/train/{list(CATEGORIES)[category_code]}/{img_name}', 0)\n",
-    "    return np.array(image).reshape(image.shape[0]*image.shape[1],)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-01-27T17:58:33.499123400Z",
-     "start_time": "2024-01-27T17:58:33.489142400Z"
-    }
-   },
-   "id": "26a8bbe7e9e885ec",
-   "execution_count": 42
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
+    "#Splitting data between train and test sets\n",
     "train_set = pd.DataFrame()\n",
     "test_set = pd.DataFrame()\n",
     "split = StratifiedShuffleSplit(n_splits=1, test_size=0.05)\n",
     "for train_dataframe, test_dataframe in split.split(train_test_dataframe, train_test_dataframe[[\"CODE\"]]):\n",
     "    train_set = train_test_dataframe.loc[train_dataframe]\n",
     "    test_set = train_test_dataframe.loc[test_dataframe]\n",
+    "    \n",
+    "#Saving train and test sets\n",
     "# train_set.to_csv(f'data/processed/train_set.csv')\n",
     "# test_set.to_csv(f'data/processed/test_set.csv')"
    ],
@@ -92,17 +76,35 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 14629 entries, 14603 to 12312\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   IMG     14629 non-null  object\n",
+      " 1   CODE    14629 non-null  int64 \n",
+      "dtypes: int64(1), object(1)\n",
+      "memory usage: 858.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_set.info()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-27T17:58:33.626809100Z",
-     "start_time": "2024-01-27T17:58:33.619942600Z"
+     "end_time": "2024-01-27T18:33:39.224371Z",
+     "start_time": "2024-01-27T18:33:39.213047200Z"
     }
    },
    "id": "8f7323682eac7c7d",
-   "execution_count": 43
+   "execution_count": 79
   }
  ],
  "metadata": {
