--- a/src/model.ipynb
+++ b/src/model.ipynb
@@ -15661,7 +15661,7 @@
     "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "model.fit(td.images, td.labels, epochs=9, batch_size=64, validation_split=0.2)\n",
-    "model.save('model_v0.1.h5')"
+    "model.save('models/model_v0.2.h5')"
    ]
   },
   {
