--- a/src/model_predict.ipynb
+++ b/src/model_predict.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-01-28T17:55:13.629701Z",
-     "start_time": "2024-01-28T17:55:13.624480600Z"
+     "end_time": "2024-01-28T18:48:31.642514300Z",
+     "start_time": "2024-01-28T18:48:27.726660700Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.keras.models import load_model\n",
     "import os\n",
@@ -74,12 +82,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T17:59:02.373407300Z",
-     "start_time": "2024-01-28T17:59:02.366346700Z"
+     "end_time": "2024-01-28T18:48:33.303583600Z",
+     "start_time": "2024-01-28T18:48:33.299735900Z"
     }
    },
    "id": "4c51dfa17ac8ac81",
-   "execution_count": 93
+   "execution_count": 4
   },
   {
    "cell_type": "code",
@@ -88,24 +96,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "161/161 [==============================] - 16s 100ms/step\n"
+      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+      "WARNING:tensorflow:From D:\\it\\ML\\IASA-Champ-24-stage1\\.venv\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "161/161 [==============================] - 9s 56ms/step\n"
      ]
     }
    ],
    "source": [
-    "pwm = PredictWithModel('models/model_v0.2.1.h5')\n",
+    "pwm = PredictWithModel('models/model_v0.2.2.h5')\n",
     "\n",
     "pwm.predict_img()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-01-28T17:59:25.730985Z",
-     "start_time": "2024-01-28T17:59:03.248243200Z"
+     "end_time": "2024-01-28T18:48:52.993048600Z",
+     "start_time": "2024-01-28T18:48:35.330995700Z"
     }
    },
    "id": "ac464e1248428e5f",
-   "execution_count": 94
+   "execution_count": 5
   },
   {
    "cell_type": "code",
@@ -114,7 +124,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "a8d2b93106e5667b"
+   "id": "765a72199c04fbb7"
   }
  ],
  "metadata": {
